--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <nav>
  <ul>
  <li><a href="#inicio">Início</a></li>
-  <img src="cosmeticvo.jpg" alt="coesmetico">
+  <img src="cosmeticvo.jpg" alt="cosmetico">
  <li><a href="#produtos">Produtos</a></li>
  <li><a href="#sobre">Sobre Nós</a></li>
  <li><a href="#contato">Contato</a></li>
